--- a/my-assessment/assessment.properties
+++ b/my-assessment/assessment.properties
@@ -5,9 +5,11 @@ user=pandora
 password=password
 # classpath=../lib/mysql-connector-java-8.0.13.jar
 
+
 # action.db=0 use existing database
 # action.db=1 initialize databse
 action.db=1
 
-
+# out.csv = 1 export query result to a csv file in ../output/
+# out.csv = 0 no export
 out.csv=1
